# Sorting-finite-Turing-Tape

./: .gitignore  CMakeLists.txt  README.md  build.sh  k_way_tape_sorting  main.cpp
docs/: k_way_tape_sorting.md  tape_sorting.md
src/: delays.hpp  file_tape.cpp  file_tape.hpp  i_tape.hpp  k_way_tape_sorting_main.cpp  main.cpp  tape_sorting_main.cpp
src/interface/: CMakeLists.txt  delays.hpp  i_tape.hpp
src/tape/: CMakeLists.txt  file_tape.cpp  file_tape.hpp  file_tmp_manager.hpp  k_way_tape_sorter.hpp  tape_sorter.hpp  tmp_tape_manager.hpp
tests/: CMakeLists.txt  tests.cpp
